AC_INIT(pi.c)
AC_CONFIG_HEADER(config.h)
            
        
AC_PROG_MAKE_SET
               
AC_HEADER_STDC
AC_CHECK_FUNCS(atoi atol strtod,,AC_MSG_ERROR(oops! no atol ?!?))
                  
VERSION="0.0.1"
AC_SUBST(VERSION)

dnl find and test the C compiler
AC_PROG_CC
AC_LANG_C

AC_PROG_CXX
AC_LANG_CPLUSPLUS

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile)

