AC_INIT(gdu.cc)
AM_INIT_AUTOMAKE(gdu,0.0.1)
AM_CONFIG_HEADER(config.h)

CXXFLAGS=

AC_PROG_CC	dnl for AM_PROG_GTK only
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl it will define GTK_FLAGS and GTK_LIBS for us,
dnl comes from gtk.m4 (aclocal will find it for us)
dnl AM_PATH_GTK(1.2.6)
AM_PATH_GTK_2_0(2.0.0)

AC_LANG_CPLUSPLUS	dnl else AM_PATH_GTK blows up

AC_CHECK_LIB(stdc++, main, , AC_MSG_ERROR(gdu, requires libstdc++))
AC_CHECK_HEADERS(stack, , AC_MSG_WARN(STL classes missing?))
AC_CHECK_HEADERS(string, , AC_MSG_WARN(STL classes missing?))
AC_CHECK_HEADERS(list, , AC_MSG_WARN(STL classes missing?))
AC_CHECK_HEADERS(vector, , AC_MSG_WARN(STL classes missing?))

AC_OUTPUT(Makefile)

